--- a/themes/vireo/style.css
+++ b/themes/vireo/style.css
@@ -1499,6 +1499,11 @@ main {
   content: "";
   display: table;
 }
+@media only screen and (max-width: 55em) {
+  .person {
+    padding: 50px 0;
+  }
+}
 .person h3 {
   margin: 0;
 }
@@ -1510,6 +1515,11 @@ main {
   width: 50%;
   z-index: 1;
   position: relative;
+}
+@media only screen and (max-width: 55em) {
+  .person-content {
+    width: 100%;
+  }
 }
 
 .ashleigh-image,
@@ -1525,9 +1535,19 @@ main {
 .ashleigh-image {
   background: url("./images/ash.jpg") no-repeat top left;
 }
+@media only screen and (max-width: 55em) {
+  .ashleigh-image {
+    display: none;
+  }
+}
 
 .jordan-image {
   background: url("./images/jordan.jpg") no-repeat top right;
+}
+@media only screen and (max-width: 55em) {
+  .jordan-image {
+    display: none;
+  }
 }
 
 .page-blog {
